--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,17 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<form action="/signup" method="post">
+  <input type="text" name="Name" placeholder="Name">
+  <br>
+  <input type="text" name="email" placeholder="Email">
+  <br>
+  <input type="password" name="password" placeholder="Password">
+  <button type="submit">Sign up</button>
+</form>
+
+<h1>Already have an account?</h1>
+
+<form action="/login" method="post">
+  <input type="text" name="email" placeholder="email">
+  <br>
+  <input type="password" name="password" placeholder="password">
+  <button type="submit">Log in</button>
+</form>
