--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,14 @@
 body {
+  background-color: rgb(71, 174, 243);
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
   color: #00B7FF; }
 
-/*# sourceMappingURL=style.css.map */
+  .navbar {
+    background-color: rgb(243, 211, 71);
+    margin-top: px;
+    margin-bottom: px;
+    float: center;
+  }
