--- a/views/favorite.hbs
+++ b/views/favorite.hbs
@@ -1,1 +1,12 @@
+<div class="header">
+    <img class="logo" src="" />
+
+    <ul class="navbar">
+      <a href="#Test">Test &nbsp</a>
+      <a href="#Test">Test &nbsp</a>
+      <a href="#Test">Test &nbsp</a>
+      <a href="#Test">Test</a>
+    </ul>
+  </div>
+
 <h1>Favorite </h1>
