--- a/views/favorite.hbs
+++ b/views/favorite.hbs
@@ -1,12 +1,1 @@
-<div class="header">
-    <img class="logo" src="" />
-
-    <ul class="navbar">
-      <a href="#Test">Test &nbsp</a>
-      <a href="#Test">Test &nbsp</a>
-      <a href="#Test">Test &nbsp</a>
-      <a href="#Test">Test</a>
-    </ul>
-  </div>
-
-<h1>Favorite </h1>
+ <h1>FAVORITE</h1>
