--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,11 @@
-  <div class="header">
-    <img class="logo" src="" />
-
-    <ul class="navbar">
-      <a href="#Test">Test &nbsp</a>
-      <a href="#Test">Test &nbsp</a>
-      <a href="#Test">Test &nbsp</a>
-      <a href="#Test">Test</a>
-    </ul>
+<div class="main">
+  
+  <div class="banner">
+  <img src="images/banner1.jpg">
   </div>
+
+  <div class="search">
+  <input class="searchBar" type="text" placeholder="Search...">
+</div>
+
+</div>
