--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,142 @@
 body {
-  background-color: rgb(71, 174, 243);
-  padding: 50px;
+  margin: 0px;
+  padding: 0px;
+  background-color: rgb(255, 255, 255);
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
-a {
-  color: #00B7FF; }
 
-  .navbar {
-    background-color: rgb(243, 211, 71);
-    margin-top: px;
-    margin-bottom: px;
-    float: center;
+
+  .container{
+    display: flex;
+    width: 100%;
+    background-color: #2c2c2c;
+    position: fixed;
+    top: 0;
+    
   }
+
+  .menu1{
+    width: 100%;
+    padding: auto;
+    margin: auto;
+  }
+
+    .menu1 ul{
+      display: flex;
+      justify-content: flex-start;
+      padding: auto;
+      margin-left: 0px;
+      
+    }
+   
+  .menu2{
+    width: 100%;
+    padding: auto;
+    margin: auto;
+    
+  }
+  .menu2 ul{
+    display: flex;
+    justify-content: flex-end;
+    padding: auto;
+    margin-right: 50px;
+    
+  }
+
+  .navigation a {
+    text-decoration: none;
+    font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+    display: block;
+    padding: auto;
+    color: #ffd000;;;
+  }
+
+  .navigation a:hover {
+    color: #ffffff;
+  }
+
+  li {
+  display: inline;
+  padding: 0px 10px;
+  list-style-type: none;
+  }
+
+  .banner img{
+    height: 100%;
+    width: 100%;
+}
+
+  .search {
+    position: absolute;
+    margin-top: -220px;
+    margin-left: 350px;
+    
+}
+
+input::placeholder {
+  color: #ffd000;
+  font-size: 25px;
+}
+
+  .searchBar {
+    height: 40px;
+    width: 600px;
+    border-radius: 10px;
+    background-color: white;
+
+}
+
+
+ .login{
+    width: auto;
+    padding: 10px;
+    margin-top: 100px;
+    margin-left: 400px;
+    background-color: #ffffff;
+    position: fixed;
+}
+
+.login input{
+    height: 40px;
+    width: 400px;
+    border-radius: 10px;
+  
+}
+
+button{
+  height: 40px;
+  width: auto;
+  padding: 10px;
+  margin-top: 5px;
+  margin-left: 10px;
+  position: fixed;
+  background-color: #2c2c2c;
+  color: #ffd000;
+  border-radius: 10px;
+}
+
+  
+  .footer{
+    display: flex;
+    width: 100%;
+    height: 12%;
+    background-color: #2c2c2c;
+    position: fixed;
+    bottom: 0;
+  }
+
+  .menu3{
+    width: auto;
+    padding: auto;
+    margin-left: 10px;
+  }
+
+    .menu3 ul{
+      display: flex;
+      flex-direction: column;
+      padding: auto;
+      margin-left: 0px;
+      
+    }
+
+  
