--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,8 @@
-<form action="/signup" method="post">
-  <input type="text" name="Name" placeholder="Name">
-  <br>
-  <input type="text" name="email" placeholder="Email">
-  <br>
-  <input type="password" name="password" placeholder="Password">
-  <button type="submit">Sign up</button>
-</form>
 
-<h1>Already have an account?</h1>
+
+<div class="login">
+
+  <h1>Login</h1>
 
 <form action="/login" method="post">
   <input type="text" name="email" placeholder="email">
@@ -15,3 +10,18 @@
   <input type="password" name="password" placeholder="password">
   <button type="submit">Log in</button>
 </form>
+
+<h1>Already have an account?</h1>
+
+<form action="/signup" method="post">
+  <input type="text" name="name" placeholder="name">
+  <br>
+  <input type="text" name="email" placeholder="email">
+  <br>
+  <input type="password" name="password" placeholder="password">
+  <button type="submit">Sign up</button>
+</form>
+
+
+
+</div>
