--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,12 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="stylesheet" href="stylesheets/style.css">
+ 
 </head>
 <body>
 
+    <div class="container">
+    <div class="menu1">
+
+    <ul class="navigation">
+       
+      <li><a href="home">Home</a></li>
+      <li><a href="categories">Categories</a></li>
+      <li><a href="#Test">Test</a></li>
+      <li><a href="#Test">Test</a></li>
+      
+    </ul>
+    </div>
+    
+    <div class="menu2">
+
+    <ul class="navigation">
+       <li><a href="favorite">Favorite</a></li>
+       <li><a href="logout">Log Out</a></li>
+  
+    </ul>
+    </div>
+    </div>
+
+
+
+     <div class="footer">
+     <div class="menu3">
+
+    <ul class="navigation">
+       
+      <li><a href="about" id="m1">About</a></li>
+      <li><a href="contact" id="m1">Contact</a></li>
+      <li><a href="facebook" id="m1">Facebook</a></li>
+      
+      
+    </ul>
+    </div>
+</div>
+
   {{{body}}}
 
-  <script src="/javascripts/script.js"></script>
+<script src="/javascripts/script.js"></script>
+
 </body>
 </html>
