--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,7 +5,16 @@
   </div>
 
   <div class="search">
-  <input class="searchBar" type="text" placeholder="Search...">
+  <input class="searchBar" type="text" autocomplete="on" placeholder="Search...">
+</div>
+
+ <div class="location">
+ <input class="locationBar" type="text" autocomplete="on" placeholder="Where?">
+ <button class="goButton" type="submit">Go!</button>
 </div>
 
 </div>
+
+
+
+
