--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
   <link rel="stylesheet" href="stylesheets/style.css">
+  
  
 </head>
 <body>
+
 
     <div class="container">
     <div class="menu1">
@@ -17,8 +19,6 @@
        
       <li><a href="home">Home</a></li>
       <li><a href="categories">Categories</a></li>
-      <li><a href="#Test">Test</a></li>
-      <li><a href="#Test">Test</a></li>
       
     </ul>
     </div>
@@ -40,9 +40,9 @@
 
     <ul class="navigation">
        
-      <li><a href="about" id="m1">About</a></li>
-      <li><a href="contact" id="m1">Contact</a></li>
-      <li><a href="facebook" id="m1">Facebook</a></li>
+      <li><a href="about">About</a></li>
+      <li><a href="contact">Contact</a></li>
+      
       
       
     </ul>
@@ -52,6 +52,7 @@
   {{{body}}}
 
 <script src="/javascripts/script.js"></script>
+
 
 </body>
 </html>
