--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,14 +62,15 @@ body {
   }
 
   .banner img{
+    display: flex;
     height: 100%;
     width: 100%;
 }
 
   .search {
     position: absolute;
-    margin-top: -220px;
-    margin-left: 350px;
+    margin-top: -210px;
+    margin-left: 300px;
     
 }
 
@@ -79,13 +80,30 @@ input::placeholder {
 }
 
   .searchBar {
-    height: 40px;
-    width: 600px;
+    height: 35px;
+    width: 350px;
+    border: 1px solid #ffffff;
     border-radius: 10px;
+    outline: none;
     background-color: white;
 
 }
 
+.location {
+  position: absolute;
+  margin-top: -210px;
+  margin-left: 670px;
+}
+
+.locationBar {
+  height: 35px;
+  width: 150px;
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+  outline: none;
+  background-color: white;
+
+}
 
  .login{
     width: auto;
@@ -97,8 +115,11 @@ input::placeholder {
 }
 
 .login input{
-    height: 40px;
-    width: 400px;
+    height: 35px;
+    width: 350px;
+    border: none;
+    border-bottom: 2px solid #2c2c2c;
+    outline: none;
     border-radius: 10px;
   
 }
@@ -109,9 +130,22 @@ button{
   padding: 10px;
   margin-top: 5px;
   margin-left: 10px;
-  position: fixed;
-  background-color: #2c2c2c;
-  color: #ffd000;
+  position: absolute;
+  background-color: #ffd000;
+  color: #2c2c2c;
+  border-radius: 10px;
+  border: none;
+}
+
+.goButton{
+  height: 40px;
+  width: auto;
+  padding: 10px;
+  margin-top: 1px;
+  margin-left: 15px;
+  position: absolute;
+  background-color: #ffd000;
+  color: #2c2c2c;
   border-radius: 10px;
 }
 
@@ -119,10 +153,11 @@ button{
   .footer{
     display: flex;
     width: 100%;
-    height: 12%;
     background-color: #2c2c2c;
-    position: fixed;
-    bottom: 0;
+    position: absolute;
+    margin-top: 100%;
+   
+    
   }
 
   .menu3{
