--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,4 +17,24 @@
 
 
 
+ <div class="flex-container" id="justify">
+    <div class="item" data-color="2a80b9">
+      <p>1</p>
+    </div>
 
+    <div class="item" data-color="2a80b9">
+      <p>1</p>
+    </div>
+
+    <div class="item" data-color="2a80b9">
+      <p>1</p>
+    </div>
+
+    <div class="item" data-color="2a80b9">
+      <p>1</p>
+    </div>
+
+    <div class="item" data-color="2a80b9">
+      <p>1</p>
+    </div>
+    </div>
