--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,11 @@
 body {
+  display: flex;
   margin: 0px;
   padding: 0px;
   background-color: rgb(255, 255, 255);
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
-
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  flex-wrap: wrap;
+}
 
 
   .container{
@@ -154,8 +156,8 @@ button{
     display: flex;
     width: 100%;
     background-color: #2c2c2c;
-    position: absolute;
-    margin-top: 100%;
+    position: fixed;
+    bottom: 0%;
    
     
   }
@@ -174,4 +176,22 @@ button{
       
     }
 
-  
+    .flex-container {
+     display: flex;
+     flex-direction: row;
+     
+      
+    }
+
+    .item {
+      margin: 10px;
+      display: inherit;
+      padding: 10px;
+      width: 100px;
+      height: 100px;
+      align-items: center;
+      background-color:#ffd000;
+      
+    }
+
+    
