--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,40 +1,84 @@
+
+
 <div class="main">
-  
   <div class="banner">
-  <img src="images/banner1.jpg">
+    <img src="images/banner1.jpg">
+  </div>
+  <div class="search">
+
+    <form action="/services">
+    <input class="searchBar" id ="searchBarId" type="text" autocomplete="on" placeholder="Search...">
+  </div>
+  <div class="location">
+    <input class="locationBar" id ="localBar" type="text" autocomplete="on" placeholder="Where?">
+    <button class="goButton" type="submit" value="submit">Go!</button>
+    </form>
+  </div>
+  
+</div>
+
+
+<div class="flex-container">
+  <div class="item" data-color="2a80b9">
+    <img src="images/2.png" class="img">
+    <p>Contractors</p>
+  </div>
+  <div class="item" data-color="2a80b9">
+    <img src="images/1.png" class="img">
+    <p>Eletricians</p>
+  </div>
+  <div class="item" data-color="2a80b9">
+    <img src="images/4.png" class="img">
+    <p>Cleaners</p>
+  </div>
+  <div class="item" data-color="2a80b9">
+    <img src="images/3.png" class="img">
+    <p>Locksmiths</p>
   </div>
 
-  <div class="search">
-  <input class="searchBar" type="text" autocomplete="on" placeholder="Search...">
+  
 </div>
 
- <div class="location">
- <input class="locationBar" type="text" autocomplete="on" placeholder="Where?">
- <button class="goButton" type="submit">Go!</button>
+<div class="flex-container">
+
+  <div class="item" data-color="2a80b9">
+    <div><img src="images/2.png" class="img"></div>
+    <div><p>Contractors</p></div>
+  </div>
+
+  <div class="item" data-color="2a80b9">
+    <img src="images/1.png" class="img">
+    <p>Eletricians</p>
+  </div>
+
+  <div class="item" data-color="2a80b9">
+    <img src="images/4.png" class="img">
+    <p>Cleaners</p>
+  </div>
+
+  <div class="item" data-color="2a80b9">
+    <img src="images/3.png" class="img">
+    <p>Locksmiths</p>
+  </div>
+
+  
 </div>
 
+<div class="text">
+  <p>blablablablablablablablablablablablablablablablablablablabla
+  blablablablablablablablablablablablablablablablablablablablablablablabla
+  blablablablablablablablablablablablablablablablablablablablablablablablablabla
+  blablablablablablablablablablablablablablablablablablablablablablablablablabla
+  blablablablablablablablablablablablablablablablablabla
+ </p>
+
+<br>
+
+  <p>blablablablablablablablablablablablablablablablablablablabla
+  blablablablablablablablablablablablablablablablablablablablablablablabla
+  blablablablablablablablablablablablablablablablablablablablablablablablablabla
+  blablablablablablablablablablablablablablablablablablablablablablablablablabla
+  blablablablablablablablablablablablablablablablablabla
+ </p>
+  
 </div>
-
-
-
- <div class="flex-container" id="justify">
-    <div class="item" data-color="2a80b9">
-      <p>1</p>
-    </div>
-
-    <div class="item" data-color="2a80b9">
-      <p>1</p>
-    </div>
-
-    <div class="item" data-color="2a80b9">
-      <p>1</p>
-    </div>
-
-    <div class="item" data-color="2a80b9">
-      <p>1</p>
-    </div>
-
-    <div class="item" data-color="2a80b9">
-      <p>1</p>
-    </div>
-    </div>
