--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
+{{!-- <h1> PROJECT BRES </h1>
+
+<a href='/signup'><button class="home-auth">Sign Up</button></a>
+<a href='/login'><button class="home-auth">Login</button></a> --}}
 
 
 <div class="login">
