--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,11 +6,13 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   flex-wrap: wrap;
 }
+
 #service {
   margin-top: 200px;
 }
 .resultImage {
-  width: 100px;
+  width: 180px;
+  height: 160px;
   border-radius: 10%;
 }
 
@@ -183,4 +185,29 @@ button {
   height: 100px;
   align-items: center;
   background-color: #ffd000;
+}
+
+.card {
+  display: flex;
+  margin: 15px;
+  height: 300px;
+  width: 300px;
+  flex-direction: row;
+  position: relative;
+  padding: 10px;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 100px;
+}
+
+.container2 {
+  position: relative;
+  text-align: center;
+  color: white;
 }
