--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,27 +6,28 @@ body {
   flex-wrap: wrap;
 }
 
-#service {
-  margin-top: 200px;
-}
-.resultImage {
-  width: 180px;
-  height: 160px;
-  border-radius: 10%;
-}
-
-.container {
+.containerHome {
   display: flex;
   width: 100%;
+  height: 50px ;
+  margin-top: 0px;
   background-color: #2c2c2c;
-  position: fixed;
-  top: 0;
+  
+}
+
+.containerResults {
+  display: flex;
+  width: 100%;
+  height: 50px ;
+  margin-top: 0px;
+  background-color: #2c2c2c;
+  
 }
 
 .menu1 {
   width: 100%;
   padding: auto;
-  margin: auto;
+  margin-top: 12px;
 }
 
 .menu1 ul {
@@ -39,7 +40,7 @@ body {
 .menu2 {
   width: 100%;
   padding: auto;
-  margin: auto;
+  margin-top: 12px;
 }
 .menu2 ul {
   display: flex;
@@ -50,18 +51,19 @@ body {
 
 .navigation a {
   text-decoration: none;
-  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+  width: 100%;
+  font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
   display: block;
-  padding: auto;
-  color: #ffd000;
+  padding: 0px;
+  color: white;
 }
 
 .navigation a:hover {
-  color: #dbb300;
+  color: #ffd000;
+  text-decoration-line: none; 
 }
 
 li {
-  display: inline;
   padding: 0px 10px;
   list-style-type: none;
 }
@@ -73,55 +75,61 @@ li {
 }
 
 .bars {
-  display: flex;
-  align-items: center;
+display: flex;
+
 }
 
 .search {
-  position: absolute;
-  margin-top: -210px;
-  margin-left: 300px;
+  margin-top: -490px;
+  margin-left: 400px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  
 }
+
+select {
+  height: 35px;
+  width: 200px;
+  border-radius: 10px;
+  border: 0px;
+  background-color: #ffd000;
+  font-size: 20px;
+
+}
+
 
 input::placeholder {
-  color: #ffd000;
-  font-size: 15px;
+  color: black;
+  font-size: 20px;
 }
 
-.searchBar {
-  height: 35px;
-  width: 350px;
-  border: 1px solid #ffffff;
-  border-radius: 10px;
-  outline: none;
-  background-color: white;
-}
 
 .location {
-  position: absolute;
-  margin-top: -210px;
-  margin-left: 670px;
+  margin-top: -35px;
+  margin-left: 630px;
+  border-radius: 5px;
+  
 }
 
 .locationBar {
   height: 35px;
   width: 150px;
-  border: 1px solid #ffffff;
-  border-radius: 10px;
-  outline: none;
-  background-color: white;
+  border: 0px;
+  border-radius: 5px;
+  background-color: #ffd000;
 }
 
 .goButton {
-  height: 40px;
+  height: 35px;
   width: 70px;
-  padding: 10px;
-  margin-top: 1px;
-  margin-left: 15px;
+  margin-top: 0px;
+  margin-left: 20px;
   position: absolute;
   background-color: #ffd000;
-  color: #2c2c2c;
-  border-radius: 10px;
+  border: 0px;
+  border-radius: 5px;
+  
 }
 
 .footer {
@@ -146,14 +154,16 @@ input::placeholder {
 }
 
 .flex-container {
-  display: flex;
+  display: grid;  
+  grid-gap: 5px;  
+  grid-template-columns: repeat(auto-fit, 250px);
+  grid-template-rows: repeat(auto-fit, 350px);
   margin-top: 5%;
   flex-direction: row;
   justify-content: space-evenly;
 }
 
 .item {
-  display: inherit;
   width: 250px;
   height: 350px;
 }
@@ -162,18 +172,21 @@ input::placeholder {
   display: flex;
   width: 250px;
   height: 350px;
-
   border-radius: 40px;
 }
 
-.textUp {
+.textUp h1{
+  font-size: 20px;
+  color: #2c2c2c;
   text-align: center;
   margin-top: 50px;
+  background-color: #ffd000;;
+  border-radius: 10px;
+ 
 }
 
 .textBody {
   text-align: center;
-
   margin-top: 100px;
 }
 
@@ -188,7 +201,7 @@ input::placeholder {
 .loginLeft {
   float: left;
   width: 50%;
-  background-color: #ffd000;
+  background-color: #2c2c2c;
 }
 
 .loginRight {
@@ -202,6 +215,12 @@ input::placeholder {
   margin-left: 30%;
 }
 
+.login2 {
+  margin-top: 20%;
+  margin-left: 20%;
+  color:white;
+}
+
 .inpLogIn {
   height: 35px;
   width: 300px;
@@ -212,9 +231,8 @@ input::placeholder {
 }
 
 .inpSignUp {
-  padding: 5px;
-  height: 15px;
-  width: 250px;
+  height: 35px;
+  width: 300px;
   border: none;
   border-bottom: 2px solid #2c2c2c;
   outline: none;
@@ -234,8 +252,17 @@ button {
   position: absolute;
   color: #2c2c2c;
   border: none;
-  border-bottom: 2px solid #2c2c2c;
   outline: none;
+  background-color: #ffd000;
+}
+
+.buttonResults {
+  height: 30px;
+  width: 150px;
+  text-align: center;
+  position: absolute;
+  color: #2c2c2c;
+  border: none;
   border-radius: 10px;
   background-color: #ffd000;
 }
@@ -259,14 +286,8 @@ button {
   font-size: 100px;
 }
 
-.container2 {
-  position: relative;
-  text-align: center;
-  color: white;
-}
-
 button:hover {
-  background-color: #ffe884;
+  background-color: #ff8484;
 }
 
 .signUpPage {
@@ -277,3 +298,35 @@ button:hover {
   outline: none;
   border-radius: 10px;
 }
+
+.bodyResults{
+  display: grid;  
+  grid-gap: 10px;  
+  grid-template-columns: repeat(auto-fit, 250px);
+  grid-template-rows: repeat(auto-fit, 400px);
+  justify-content: space-around;
+  margin-top: 100px;
+  
+}
+
+.cardResults {
+  display: flex;
+  width: 280px;
+  outline: none;
+  border-radius: 10px;
+  background-color: rgb(223, 223, 223);
+  
+  }
+
+  .resultImage {
+    block-size: auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 10%;
+  }
+
+
+
+
+
+  
