--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,7 +2,23 @@
 
   <div class="loginLeft">
 
+    <div class="login2">
 
+     <h5>Already have an account?</h5>
+
+      <form action="/signup" method="post">
+        <input class="inpSignUp" type="text" name="name" placeholder="name">
+        <br>
+        <input class="inpSignUp" type="text" name="email" placeholder="email">
+
+        <br>
+        <input class="inpSignUp" type="password" name="password" placeholder="*******">
+        <br>
+        <br>
+        <div><button type="submit">Sign up</button></div>
+      </form>
+
+</div>
   </div>
 
 
@@ -18,7 +34,7 @@
         <input class="inpLogIn" type="text" name="email" placeholder="email">
         <br>
         <br>
-        <input class="inpLogIn" type="password" name="password" placeholder="password">
+        <input class="inpLogIn" type="password" name="password" placeholder="*******">
         <br>
         <br>
         <div><button type="submit">Log in</button></div>
@@ -26,19 +42,7 @@
 
 
 
-      <h5>Already have an account?</h5>
-
-      <form action="/signup" method="post">
-        <input class="inpSignUp" type="text" name="name" placeholder="name">
-        <br>
-        <input class="inpSignUp" type="text" name="email" placeholder="email">
-
-        <br>
-        <input class="inpSignUp" type="password" name="password" placeholder="password">
-        <br>
-        <br>
-        <div><button type="submit">Sign up</button></div>
-      </form>
+     
 
 
 
