--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,47 +7,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
   <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
 
 <body>
-  <div class="container">
-    <div class="menu1">
-
-      <ul class="navigation">
-
-        <li><a href="home">Home</a></li>
-        <li><a href="categories">Categories</a></li>
-
-      </ul>
-    </div>
-
-    <div class="menu2">
-
-      <ul class="navigation">
-        <li><a href="favorite">Favorite</a></li>
-        <li><a href="logout">Log Out</a></li>
-
-      </ul>
-    </div>
-  </div>
-
-
-  <div class="footer">
-    <div class="menu3">
-
-      <ul class="navigation">
-
-        <li><a href="about">About</a></li>
-        <li><a href="contact">Contact</a></li>
-
-      </ul>
-    </div>
-  </div>
+  
 
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
 </body>
 
