--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,7 +4,7 @@
 
     <div class="login2">
 
-     <h5>Already have an account?</h5>
+     {{!-- <h5>Already have an account?</h5>
 
       <form action="/signup" method="post">
         <input class="inpSignUp" type="text" name="name" placeholder="name">
@@ -16,7 +16,7 @@
         <br>
         <br>
         <div><button type="submit">Sign up</button></div>
-      </form>
+      </form> --}}
 
 </div>
   </div>
