--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,19 +4,7 @@
 
     <div class="login2">
 
-     {{!-- <h5>Already have an account?</h5>
-
-      <form action="/signup" method="post">
-        <input class="inpSignUp" type="text" name="name" placeholder="name">
-        <br>
-        <input class="inpSignUp" type="text" name="email" placeholder="email">
-
-        <br>
-        <input class="inpSignUp" type="password" name="password" placeholder="*******">
-        <br>
-        <br>
-        <div><button type="submit">Sign up</button></div>
-      </form> --}}
+     <input class="inpSignUp" type="button" onclick="location.href='/signup';" value="Go to create an account" />
 
 </div>
   </div>
@@ -42,7 +30,7 @@
 
 
 
-     
+      
 
 
 
