--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,7 +4,7 @@
 
     <div class="login2">
 
-     <input class="inpSignUp" type="button" onclick="location.href='/signup';" value="Go to create an account" />
+     <input class="sig" type="button" onclick="location.href='/signup';" value="Go to create an account" />
 
 </div>
   </div>
