--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 
     <div class="login2">
 
-     <h5>Create an Account</h5>
+     
 
       {{!-- <form action="/signup" method="post">
         <input class="inpSignUp" type="text" name="name" placeholder="name">
@@ -18,7 +18,7 @@
         
       </form> --}}
 
-     <input class="inpSignUp" type="button" onclick="location.href='/signup';" value="Go to create an account" />
+     <input class="sig" type="button" onclick="location.href='/signup';" value="Go to create an account" />
 
 </div>
   </div>
