--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -195,7 +195,7 @@ input::placeholder {
   width: 100%;
   min-height: 100vh;
   flex-direction: row;
-  background-color: #ffd000;
+  background-color: white;
 }
 
 .loginLeft {
@@ -206,6 +206,7 @@ input::placeholder {
 
 .loginRight {
   float: right;
+  margin-top: 90px;
   width: 50%;
   background-color: white;
 }
@@ -249,6 +250,18 @@ button {
   width: 100px;
   margin-top: -5px;
   margin-left: 10px;
+  position: absolute;
+  color: #2c2c2c;
+  border: none;
+  outline: none;
+  background-color: #ffd000;
+}
+
+.sig {
+  height: 50px;
+  width: 200px;
+  margin-top: 150px;
+  margin-left: 70px;
   position: absolute;
   color: #2c2c2c;
   border: none;
