--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -12,7 +12,7 @@
 
 
 
-<h2>CREATE</h2>
+<h2>Create an Account!</h2>
 
 <form action="/signup" method="post">
   <input class="signUpPage" type="text" name="name" placeholder="name">
