--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,6 +68,13 @@ li {
   list-style-type: none;
 }
 
+.banner {
+  background-image: url("/images/banner1.jpg");
+  width: 100%;
+  height: 370px;
+  background-size: cover;
+}
+
 .banner img {
   display: flex;
   height: 100%;
@@ -80,8 +87,8 @@ display: flex;
 }
 
 .search {
-  margin-top: -210px;
-  margin-left: 400px;
+  margin-top: 150px;
+  margin-left: -80px;
   border: none;
   outline: none;
   border-radius: 10px;
@@ -105,9 +112,14 @@ input::placeholder {
 }
 
 
+#search-bars {
+  display: flex;
+  justify-content: center;
+}
+
 .location {
-  margin-top: -35px;
-  margin-left: 630px;
+  margin-top: 150px;
+  margin-left: 30px;
   border-radius: 5px;
   
 }
@@ -161,7 +173,10 @@ input::placeholder {
   margin-top: 5%;
   flex-direction: row;
   justify-content: space-evenly;
+
 }
+
+
 
 .item {
   width: 250px;
@@ -173,6 +188,8 @@ input::placeholder {
   width: 250px;
   height: 350px;
   border-radius: 40px;
+  opacity: 0.5;
+  filter: alpha(opacity=40);
 }
 
 .textUp h1{
@@ -288,6 +305,12 @@ button {
   flex-direction: row;
   position: relative;
   padding: 10px;
+
+}
+
+.imgCard:hover {
+  opacity: 1.0;
+  filter: alpha(opacity=100);
 }
 
 .centered {
